# modorganizer-bsplugins

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  plugindefinition.json
src/: CMakeLists.txt  MakeFormParser.py  ParseTES.cmake  bsplugins_de.ts  bsplugins_en.ts  resources.qrc
src/BSPluginInfo/: AuxConflictModel.cpp  AuxConflictModel.h  AuxTreeModel.cpp  AuxTreeModel.h  DataItem.h  FormParser.h  FormParser.inl  PluginInfoDialog.cpp  PluginInfoDialog.h  PluginRecordModel.cpp  PluginRecordModel.h  PluginRecordView.cpp  PluginRecordView.h  RecordFilterProxyModel.cpp  RecordFilterProxyModel.h  RecordStructureModel.cpp  RecordStructureModel.h  SingleRecordParser.cpp  SingleRecordParser.h  plugininfodialog.ui  pluginrecordview.ui
src/BSPluginList/: ConflictIconDelegate.cpp  ConflictIconDelegate.h  FlagIconDelegate.cpp  FlagIconDelegate.h  PluginGroupProxyModel.cpp  PluginGroupProxyModel.h  PluginListContextMenu.cpp  PluginListContextMenu.h  PluginListDropInfo.cpp  PluginListDropInfo.h  PluginListModel.cpp  PluginListModel.h  PluginListStyledItemDelegate.cpp  PluginListStyledItemDelegate.h  PluginListView.cpp  PluginListView.h  PluginListViewMarkingScrollBar.h  PluginSortFilterProxyModel.cpp  PluginSortFilterProxyModel.h  PluginsWidget.cpp  PluginsWidget.h  pluginswidget.ui
src/GUI/: CopyEventFilter.cpp  CopyEventFilter.h  GenericIconDelegate.cpp  GenericIconDelegate.h  IGeometrySettings.h  IStateSettings.h  IconDelegate.cpp  IconDelegate.h  ListDialog.cpp  ListDialog.h  MessageDialog.cpp  MessageDialog.h  SelectionDialog.cpp  SelectionDialog.h  ViewMarkingScrollBar.cpp  ViewMarkingScrollBar.h  messagedialog.ui  selectiondialog.ui
src/MOPlugin/: BSPlugins.cpp  BSPlugins.h  IPanelInterface.h  IPluginPanel.cpp  IPluginPanel.h  MOPanelInterface.cpp  MOPanelInterface.h  Settings.cpp  Settings.h
src/MOTools/: ILootCache.h  Loot.cpp  Loot.h  LootDialog.cpp  LootDialog.h  LootGroups.cpp  (+2 more)
(+30 files in other folders)
